# cent

./: .clang-tidy  CMakeLists.txt  contributing.md  makefile  readme.md
.github/workflows/: release.yml
examples/: array.cn  enum.cn  fib.cn  functions.cn  generics.cn  optional.cn  raylib.cn  slice.cn  tuple.cn  type.cn  union.cn  variables.cn  vec2.cn
include/cent/: log.h  modules.h  offset_value.h  position.h  span.h  util.h
include/cent/ast/: array_type.h  as_expr.h  assignment.h  attribute.h  binary_expr.h  block_stmt.h  call_expr.h  continue_stmt.h  enum_decl.h  fn_decl.h  identifier.h  if_else.h  index_expr.h  literals.h  member_expr.h  method_expr.h  module.h  named_type.h  node.h  optional.h  pointer.h  program.h  return_stmt.h  scope_resolution.h  span_value.h  struct.h  tuple_type.h  unary_expr.h  var_decl.h  while_loop.h
include/cent/ast/decl/: enum_decl.h  fn_decl.h  struct.h  type_alias.h  var_decl.h
include/cent/ast/expr/: binary_expr.h  call_expr.h  index_expr.h  literals.h  member_expr.h  slice_expr.h  unary_expr.h
include/cent/ast/stmt/: assert_stmt.h  assignment.h  break_stmt.h  if_else.h  unreachable.h  while_loop.h
include/cent/ast/type/: array_type.h  named_type.h  slice_type.h  tuple_type.h
include/cent/backend/: codegen.h  emit.h  scope.h  type.h  value.h  variable.h
include/cent/backend/llvm/: codegen.h  emit.h  type.h
include/cent/backend/llvm/types/: alias.h  enum.h  function.h  primitive.h  struct.h
include/cent/backend/types/: enum.h  function.h  primitive.h  struct.h
include/cent/frontend/: lexer.h  parser.h  token.h
lib/: c.cn  posix.cn  std.cn
lib/c/: types.cn
lib/posix/: types.cn
lib/std/: alloc.cn  ffi.cn  fs.cn  io.cn  mem.cn
src/: log.h  main.cpp  modules.cpp  modules.h  offset_value.h  options.cpp  options.h  readme.md  unicode.h  util.cpp  util.h  version.h
src/ast/: attribute.h  fn_proto.h  module.h  node.h
src/ast/decl/: enum_decl.h  fn_decl.h  for_block.h  struct.h  type_alias.h  union.h  var_decl.h
src/ast/expr/: as_expr.h  binary_expr.h  call_expr.h  identifier.h  index_expr.h  literals.h  member_expr.h  method_expr.h  sizeof_expr.h  slice_expr.h  unary_expr.h  unwrap_expr.h
src/ast/stmt/: assert_stmt.h  assignment.h  block_stmt.h  break_stmt.h  continue_stmt.h  defer_stmt.h  for_loop.h  if_else.h  return_stmt.h  switch.h  unreachable.h  while_loop.h
src/ast/type/: array_type.h  fn_pointer.h  named_type.h  optional.h  pointer.h  range_type.h  slice_type.h  tuple_type.h
src/backend/: codegen.cpp  emit.cpp
src/backend/llvm/: abi.h  codegen.cpp  codegen.h  codegen_decl.cpp  codegen_expr.cpp  codegen_stmt.cpp  codegen_type.cpp  emit.cpp  emit.h  generic_types.h  generics.h  scope.h  type.h  value.h
src/backend/llvm/types/: alias.h  enum.h  function.h  generic.h  primitive.h  struct.h  template_param.h  type_param.h  union.h
src/frontend/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
test/: alias.cn  array.cn  as.cn  empty.cn  enum.cn  extern.cn  fib.cn  fn.cn  fn_ptr.cn  for.cn  if_else.cn  method.cn  optional.cn  printf.cn  sizeof.cn  slice.cn  strlen.cn  struct.cn  switch.cn  tuple.cn  union.cn  var.cn  variadic.cn
